--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Avalon Breaker">
     <meta name="author" content="S.X.">
 
-  <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
+  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,7 +16,43 @@
 </head>
 
 <body>
-    <script src="lodash.js"></script>
+    <div class="pre-game row">
+        <div class="col-xs-6">
+            <label>Number of players</label>
+            <input type="text" name="noOfPlayers" id="no-of-players">
+        </div>
+        <a class="col-xs-1 btn btn-info" id="game-start">GO</a>
+    </div>
+
+    <div class="game row">
+        <div class="game-board col-xs-10">
+
+        </div>
+        <div class="game-status col-xs-2">
+            <div class="game-status-overall">
+                <div>
+                    <label>Number of players</label>
+                    <span id="status-no-of-players"></span>
+                </div>
+                <div>
+                    <label>Number of heroes</label>
+                    <span id="status-no-of-heroes"></span>
+                </div>
+                <div>
+                    <label>Number of villains</label>
+                    <span id="status-no-of-villains"></span>
+                </div>
+                <div>
+                    <label>Number of innocents</label>
+                    <span id="status-no-of-innos"></span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="lib/jquery-1.11.3.js"></script>
+    <script src="lib/lodash.js"></script>
     <script src="avalon.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
