Completed the following: proposerselection proposeeselection vote mission

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <div class="game row">
         <div class="game-board col-xs-10">
             <a class="btn btn-warning" id="action-button">Propose</a>
+            <a class="btn btn-info" id="action-button-2">Fail</a>
             <div class="game-board-players">
             </div>
         </div>
