Added basic styling Added cancel button in case of error

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="S.X.">
 
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="styles.css">
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -45,6 +46,7 @@
             <a class="btn btn-info" id="action-button-2">Fail</a>
             <div class="game-board-players">
             </div>
+            <div class="btn btn-success" id="cancel-button">Cancel selection</div>
         </div>
         <div class="game-status col-xs-2">
             <div class="game-status-overall">
