--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Avalon Breaker</title>
     <meta name="description" content="Avalon Breaker">
     <meta name="author" content="S.X.">
@@ -17,14 +17,17 @@
 </head>
 
 <body>
+    <div class="title">
+        <img src="img/ab-logo.png">
+    </div>
     <div class="pre-game">
-        <div>
-            <label>Number of players</label>
-            <input type="text" name="noOfPlayers" id="no-of-players">
+        <div class="list-item row">
+            <label class="col-xs-6">Player count</label>
+            <input type="text" name="noOfPlayers" id="no-of-players" class="col-xs-6">
         </div>
-        <div>
-            <label>My Role</label>
-            <select id="my-role">
+        <div class="list-item row">
+            <label class="col-xs-6">My Role</label>
+            <select id="my-role" class="col-xs-6">
                 <option value="merlin">Merlin</option>
                 <option value="percival">Percival</option>
                 <option value="morgana">Morgana</option>
@@ -33,22 +36,22 @@
                 <option value="dummy">Dummy</option>
             </select>
         </div>
-        <div>
-            <label>Is dummy in game?</label>
-            <input type="checkbox" id="dummy-in-game">
+        <div class="list-item row">
+            <label class="col-xs-6">Dummy?</label>
+            <input type="checkbox" id="dummy-in-game" class="col-xs-6">
         </div>
         <a class="btn btn-info" id="game-start">GO</a>
     </div>
 
     <div class="game row">
-        <div class="game-board col-xs-10">
+        <div class="game-board col-lg-10">
             <a class="btn btn-warning" id="action-button">Propose</a>
             <a class="btn btn-info" id="action-button-2">Fail</a>
             <div class="game-board-players">
             </div>
             <div class="btn btn-success" id="cancel-button">Cancel selection</div>
         </div>
-        <div class="game-status col-xs-2">
+        <div class="game-status col-lg-2">
             <div class="game-status-overall">
                 <div>
                     <label>Number of players</label>
